[package]
edition = "2021"
name = "massello"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow = "45.0.0"
bytes = "1.4.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
parquet = "45.0.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
